refactor(service): replace collect with stream tolist